@@ -1,0 +1,17 @@
+<!-- Menubar component -->
+<%args>
+$uri
+</%args>
+<div class="menubar">
+% if ($uri eq "index.htm") {
+<p>Helper</p>
+% } else {
+<p><a href="index.htm">Helper</a></p>
+% }
+% if ($uri eq "suggest.htm") {
+<p>Suggestions</p>
+% } else {
+<p><a href="suggest.htm">Suggestions</a></p>
+% }
+
+</div>
